[package]
name = "raster_drone"
version = "0.1.0"
edition = "2021"

exclude = [
  "python/",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raster_drone"
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.24.0"
image = { version = "0.25.8", features = ["png"] }
pyo3 = "0.23.3"
rfd = "0.15.4"
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
pollster = "0.3"
wgpu = "0.19.4"
